--- a/vignettes/Intro_to_D3mirt.Rmd
+++ b/vignettes/Intro_to_D3mirt.Rmd
@@ -28,7 +28,7 @@ knitr::knit_hooks$set(webgl = hook_webgl)
 
 The `D3mirt` analysis is based on descriptive multidimensional item response theory (DMIRT; Reckase2009, 1985; Reckase & McKinley, 1991) and can be used to analyze dichotomous and polytomous items in a multidimensional ability space.
 In DMIRT analysis, also called within multidimensional modeling, it is assumed that items in a multidimensional ability space can measure single or multiple latent traits (Reckase, 2009, 1985; Reckase & McKinley, 1991).
-The DMIRT method is said to be descriptive because the estimates describe item characteristics when more than one latent dimension is used in the analysis.
+The method is said to be descriptive because the estimates describe item characteristics when more than one latent dimension is used in the analysis.
 
 Under the assumption of within-dimensionality, the two-parameter graded response model (GRM; Samejima, 1969) is used to extract two-parameter multidimensional item characteristics prior to the DMIRT analysis.
 For `D3mirt`, this implies that a three-dimensional GRM must be fitted so that discrimination and difficulty parameters for a three-dimensional latent trait model can be extracted.
@@ -61,8 +61,8 @@ $$
 
 The $MDIFF$ is interpreted similarly as the difficulty parameter in the unidimensional model.
 That is, higher values indicate that higher levels of ability for a probability of a correct response of more than .5 are necessary.
-Moreover, the $MDIFF$, just as in the unidimensional model, sets the distance along the x-axis from the origin of the model to the point of maximum slope.
-However, in DMIRT analysis, the MDIFF becomes a multidimensional location parameter that indicates the distance from the origin to the point of maximum slope following the direction vector given by the $a_{il}$ equation.
+Moreover, the $MDIFF$, just as in the unidimensional model, sets the distance from the origin of the model to the point of maximum slope.
+However, in DMIRT analysis, the $MDIFF$ becomes a multidimensional location parameter that indicates the distance from the origin to the point of maximum slope following the direction vector given by the $a_{il}$ equation.
 In addition, for Likert items that hold multiple item response functions, the $MDIFF$ can, therefore, show the multidimensional range of difficulty for an item, as located in a multidimensional latent trait space.
 
 The $MDISC$ is visualized by scaling the length of the vector arrows.
@@ -70,7 +70,7 @@ In brief, the bottom location coordinates of the vector arrows given the $MDIFF$
 This also implies that shorter vector arrows imply lower discrimination which in turn indicates an increased amount of model violations of the GRM.
 
 In what follows, the `D3mirt` procedure and some of its functions and options will be described using the built-in data set "anes08_09offwaves".
-The data set ($N = 1046, M_{age} = 51.33, SD = 14.56, 57%$ Female) is a subset from the American National Election Survey (ANES) from the 2008-2009 Panel Study Off Wave Questionnaires, December 2009 (DeBell, et al, 2010; <https://electionstudies.org/data-center/2008-2009-panel-study/>).
+The data set ($N = 1046, M_{age} = 51.33, SD = 14.56, 57\%$ Female) is a subset from the American National Election Survey (ANES) from the 2008-2009 Panel Study Off Wave Questionnaires, December 2009 (DeBell, et al, 2010; <https://electionstudies.org/data-center/2008-2009-panel-study/>).
 All items measure moral preferences and are positively scored of Likert type, ranging from 1 = *Strongly Disagree* to 6 = *Strongly Agree*.
 Demographic variables include age and gender (male/female).
 
@@ -97,7 +97,7 @@ The model identification process is described in more detail below.
 
 ## Step 1: Explore the Data Structure
 
-To begin the factor structure must be explored with exploratory factor analysis (EFA).
+If the model is not known, the factor structure must be explored with exploratory factor analysis (EFA).
 However, because `D3mirt` analysis is based on the GRM, it is recommended to use multidimensional item response theory EFA methods, such as the EFA option in `mirt::mirt` (Chalmers, 2012) with `ìtemtype = 'graded'`, so that the EFA is performed with the GRM as the item model.
 Note, the EFA is only used to find model identification items that meet the necessary DMIRT model specification requirements.
 The EFA model itself is discarded after this step in the procedure.
@@ -108,7 +108,7 @@ data("anes08_09offwaves")
 x <- anes08_09offwaves
 x <- x[,3:22] # Remove columns for age and gender
 
-# Fit a three-factor EFA model with mirt package
+# Fit a three-factor EFA model with the mirt package
 f <- mirt::mirt(x, 3, itemtype = 'graded')
 
 # Assign data frame with factor loadings with oblimin rotation
@@ -210,9 +210,10 @@ x <- anes08_09offwaves
 x <- x[,3:22] # Remove columns for age and gender
 
 # Fit a three-dimensional graded response model with orthogonal factors
-# Example below use Likert items from the built in data set "anes08_09offwaves"
+# Example below uses Likert items from the built in data set "anes08_09offwaves"
 # Item W7Q3 and item W7Q20 was selected with `modid()`
-# The model specification specify all items in the data set (1-20) to load on all three factors (F1-F3)
+# The model specification set all items in the data set (1-20) 
+# to load on all three factors (F1-F3)
 # The START and FIXED commands are used on the two items to identify the DMIRT model
  spec <- ' F1 = 1-20
            F2 = 1-20
@@ -304,7 +305,7 @@ To illustrate the utility of `D3mirt` visualization, a short example using the `
 Graphing in default mode by calling `plotd3mirt` will return an RGL device that will appear in an external window as a three-dimensional object that can be rotated.
 In this illustration, however, all RGL devices are shown inline, as interactive objects that can be rotated.
 The `view` argument is also used in all function calls to `plotD3mirt` below.
-This was only done for optimizing the size of the RGL device (default `view = c(15, 20, 7)`) when creating this R Markdown.
+This was only done for optimizing the size of the RGL device (default `view = c(15, 20, 7)`) when creating this R Markdown vingette.
 
 ```{r, testg1, webgl = TRUE, fig.width = 7, fig.height = 7}
 # Plot RGL device
@@ -458,7 +459,7 @@ plotD3mirt(g, hide = TRUE,
            view = c(15, 20, 0.6))
 ```
 
-In the graphical output, it can be observed a simple profile on gender in which more women tend to have higher levels of trait on compassion (\$O\_{1, 2, 5, 6}\$).
+In the graphical output, it can be observed a simple profile on gender in which more women tend to have higher levels of trait on compassion ($O_{1, 2, 5, 6}$).
 There seems not to be any observable gender difference related to Conformity or Fairness.
 
 The use of `rep()` function makes it possible to create groups based on factor levels.
